ikinci ödev hazır

--- a/index.html
+++ b/index.html
@@ -7,16 +7,41 @@
 <p>Merhaba! Ben Muhammed Zahid Önal. İstanbul'da yaşıyorum. Bilim-kurgu,aksiyon ve gerilim temalı filmleri çok severim.</p>
 <p>Lise, hazırlık sınıfıyım. Fenerbahçeliyim. İngilizce öğrenmeye çalışıyorum, onun haricinde ana dilim hariç konuşabildiğim bi dil yok.</p>
 
+<h2>İlgi alanlarım</h2>
+
+<ol>
+    <li>Film</li>
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt1375666/" target="_blank">Başlangıç</a></li>
+        <li>Örümcek Adam : Eve Dönüş Yok</li>
+        <li>The Adam Project</li>
+    </ul>
+    <li>Dizi</li>
+    <ul>
+        <li>Stranger Things</li>
+        <li><a href="https://www.imdb.com/title/tt0903747/" target="_blank">Breaking Bad</a></li>
+        <li>Behzat Ç.</li>
+    </ul>
+    <li>Kitap</li>
+    <ul>
+        <li><a href="https://www.goodreads.com/book/show/23256064-cesur-yeni-d-nya" target="_blank">Cesur Yeni Dünya</a></li>
+        <li>On Küçük Zenci</li>
+        <li>Bir Küçük Osmancık Vardı</li>
+    </ul>
+</ol>
+
 <!-- Sevdiğim Diziler-->
 
 <h3>Sevdiğim Diziler:</h3>
 
+<img width="600" height="800" src="https://resizing.flixster.com/0xxuABVVuzJrUT130WFHKE-irEg=/ems.cHJkLWVtcy1hc3NldHMvdHZzZWFzb24vNzUyMTFhOTktZTU4Ni00ODkyLWJlYjQtZTgxYTllZmU2OGM0LmpwZw==" alt="">
 <h4>Stranger Things:</h4>
 
 <p>Amerikan yapımı olan filmde küçük yaşlarda laborant babası tarafından annesinden doğar</p>
-<p>doğmaz alınan eleven ve ikokul yaşlarında olan michael, dustin, lucas ve will'in maceraları anlatılmaktadır</p>
+<p>doğmaz alınan eleven ve ilkokul yaşlarında olan michael, dustin, lucas ve will'in maceraları anlatılmaktadır</p>
 
 <h4>Behzat Ç.</h4>
 
 <p>Cinayet büro da çalışan Behzat amir ve ekibi: Akbaba, Hayalet ve Harun'un</p>
 <p>cinayetleri çözerken yaşadıkları konu alınır.</p>
+
